--- a/website/src/forklist.html
+++ b/website/src/forklist.html
@@ -96,7 +96,7 @@
 </div>
 
 <div class="w3-container w3-content">
-    If you like this project, <a href="/{{language.id}}/supportus.html">support
+    If you like this project, <a href="/{{language.id}}/supportus/">support
     us</a> !
 </div>
 
