--- a/website/src/inc/footer.html
+++ b/website/src/inc/footer.html
@@ -1,6 +1,6 @@
 <div class="w3-container w3-bar w3-large w3-theme-d4">
-    <a class="w3-bar-item w3-button" href="/{{language.id}}/links">What are forks</a>
-    <a class="w3-bar-item w3-button" href="/{{language.id}}/howto/">How do i get my fork money</a>
+    <a class="w3-bar-item w3-button" href="/{{language.id}}/what/is/a/fork/">What is a fork</a>
+    <a class="w3-bar-item w3-button" href="/{{language.id}}/how/to/claim/forked/coins">How to claim my ______ forked coins</a>
 
     <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/imprint/">Imprint</a>
     <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/privacy/">Data Privacy</a>
