--- a/website/src/whatisafork.html
+++ b/website/src/whatisafork.html
@@ -3,7 +3,11 @@
 
 <div class="w3-container w3-content">
 
-    <h1>Interesting links</h1>
+    <h1>What are forks</h1>
+
+    Forks are very good !
+
+    <h2>Interesting links</h2>
 
     <ul>
         {{#each links}}
