--- a/website/src/details.html
+++ b/website/src/details.html
@@ -38,7 +38,7 @@
         {{/with}}
     </div>
 
-    <div class="w3-container w3-cell w3-hide-small">
+    <div class="w3-container w3-cell">
         <h2>How do i claim my
             forked {{name}} coins.
         </h2>
