--- a/website/src/forklist.html
+++ b/website/src/forklist.html
@@ -27,7 +27,7 @@
     </select></h2>
     <!--{{prettifyDate timestamp}}-->
 
-    <small>{{intlGet "last_update"}}: {{formatTime timestamp "short" }}</small>
+    <small>{{intlGet "last_update"}}: {{prettifyDate timestamp }} {{formatTime timestamp "datetime" }}</small>
 </div>
 
 
