--- a/website/src/supportus.html
+++ b/website/src/supportus.html
@@ -3,7 +3,7 @@
 
 <div class="w3-container w3-content">
 
-    <h1>Support us</h1>
+    <h1>Support allmyforks.com</h1>
 
     There are several ways to support us.
 
