--- a/website/src/imprint.html
+++ b/website/src/imprint.html
@@ -3,7 +3,7 @@
 
 <div class="w3-container w3-content w3-center">
 
-    {{{intlGet "imprint"}}}
+    {{{intlGet "content_imprint"}}}
 
     <a class="w3-bar-item w3-button w3-right" href="https://froso.de" target="new">Frontend Solutions
         GmbH</a>
