--- a/website/src/disclaimer.html
+++ b/website/src/disclaimer.html
@@ -5,6 +5,40 @@
 
     {{{intlGet "content_disclaimer"}}}
 
+{{#ifCond language.id "==" "en"}}
+
+<h1>Disclaimer</h1>
+<ul>
+	<li>We do not provide personal investment advice and we are not a qualified licensed investment advisor. We are amateur investors.</li>
+	<li>All information found here, including any ideas, opinions, views, predictions, forecasts, commentaries, suggestions, or stock picks, expressed or implied herein, are for informational, entertainment or educational purposes only and should not be construed as personal investment advice. While the information provided is believed to be accurate, it may include errors or inaccuracies.</li>
+	<li><b>We will not and cannot be held liable for any actions you take as a result of anything you read here.</b></li>
+	<li>Conduct your own due diligence, or consult a licensed financial advisor or broker before making any and all investment decisions. Any investments, trades, speculations, or decisions made on the basis of any information found on this site, expressed or implied herein, are committed at your own risk, financial or otherwise.</li>
+	<li>Allmyforks.com reflects our own views, ideas and opinions. It is not affiliated with any broker/dealer or registered investment advisor.</li>
+	<li>No representations or warranties are made with respect to the accuracy or completeness of the content of this entire weblog, including any links to other sites. The links provided are maintained by their respective organizations and they are solely responsible for their content. All information presented here is provided ‘as is’, without warranty of any kind, expressed or implied.</li>
+	<li>From time to time we may include affiliate links and advertisements on allmyforks that result in receiving a payment should a visitor click on a link or sign up to a service, as per established Internet practice. Readers are entirely responsible for any actions they take as a result of reading or clicking on links on the site, and are urged to read the small print!</li>
+</ul>
+
+{{/ifCond}}
+
+{{#ifCond language.id "==" "de"}}
+
+<h1>Haftungsauschluss</h1>
+<ul>
+	<li>Wir bieten keine persönliche Anlageberatung an und sind kein qualifizierter Anlageberater. Wir sind Amateurinvestoren.</li>
+	<li>Alle hierin enthaltenen Informationen, einschließlich Ideen, Meinungen, Ansichten, Vorhersagen, Prognosen, Kommentaren, Vorschlägen oder Empfehlungen, sind ausdrücklich nur zu Informations-, Unterhaltungs- oder Bildungszwecken gedacht und sollten nicht als persönliche Anlageberatung ausgelegt werden. Obwohl davon ausgegangen wird, dass die bereitgestellten Informationen korrekt sind, können Fehler oder Ungenauigkeiten auftreten.</li>
+<li>Wir übernehmen keine Haftung für Handlungen, die Sie aufgrund von hier gelesenen Inhalten vornehmen.</li>
+
+<li>Führen Sie Ihre eigene Risikoprüfung durch oder konsultieren Sie einen lizenzierten Finanzberater oder Broker, bevor Sie irgendwelche Investitionsentscheidungen treffen. Jegliche Investitionen, Transaktionen, Spekulationen oder Entscheidungen, die auf der Grundlage der auf dieser Website enthaltenen Informationen getroffen werden, sind ausdrücklich auf eigenes Risiko, finanzieller Art oder anderweitig festgelegt.</li>
+
+<li>Allmyforks.com spiegelt unsere eigenen Ansichten, Ideen und Meinungen wider. Es ist nicht mit einem Broker / Händler oder einem registrierten Anlageberater verbunden.</li>
+
+<li>In Bezug auf die Genauigkeit oder Vollständigkeit des Inhalts dieser gesamten Webseite, einschließlich aller Links zu anderen Websites, werden keine Zusicherungen oder Gewährleistungen abgegeben. Die bereitgestellten Links werden von ihren jeweiligen Organisationen gepflegt und sind für ihren Inhalt allein verantwortlich. Alle hier dargestellten Informationen werden ohne Mängelgewähr, weder ausdrücklich noch stillschweigend, zur Verfügung gestellt.</li>
+
+<li>Von Zeit zu Zeit können wir Affiliate-Links und Werbung auf allmyforks einbinden, die zu einer Zahlung des Werbepartners an uns führen, sollte ein Besucher auf einen Link klicken oder sich für seinen Dienst anmelden. Die Leser tragen die volle Verantwortung für alle Aktionen ihres Handelns auf den Seiten der Betreiber.</li>
+	
+</ul>
+
+{{/ifCond}}
 
 </div>
 {{> footer}}
