--- a/website/src/whatisafork.html
+++ b/website/src/whatisafork.html
@@ -5,14 +5,22 @@
 
     <h1>What are forks</h1>
 
-    Forks are very good !
+	<ul>
+		<li>TODO: Short description</li>
+		<li>TODO: "Hard Forks" vs "Soft Forks" vs "User actived Forks"</li>
+		<li>TODO: Graphic demonstrating split and money calculation</li>
+		<li>Read: <a href="/{{language.id}}/how-to-claim-forked-coins">
+        {{formatMessage (intlGet "howtoclaimmyforkedcoin") name="_____"}}</a></li>
+	</ul>
 
-    <h2>Interesting links</h2>
+
+	
+    <h2>More to read</h2>
 
     <ul>
         {{#each links}}
 
-        <li>{{url}}</li>
+        <li><a href="{{url}}" target="link-{{url}}">{{title}}</a> - {{intlGet description}}</li>
 
         {{/each}}
 
