--- a/website/src/howtoclaimforkedcoins.html
+++ b/website/src/howtoclaimforkedcoins.html
@@ -2,18 +2,28 @@
 
 <div class="w3-container w3-content">
 
-    <h2>How to i get my fork-money?</h2>
+    <h2>{{formatMessage (intlGet "howtoclaimmyforkedcoin") name="_____"}}</h2>
+
+    1. Make sure that you can access the coin, dependant on where your Main Coin was saved
+
+    <ol>
+        <li>Desktop computer - TODO</li>
+        <li>Online Wallet - TODO</li>
+        <li>Mobile Wallet - TODO</li>
+        <li>Online Market - TODO</li>
+        <li>Usb Stick - TODO</li>
+    </ol>
+
+    2. Do the following (TODO):
+
     <ul>
-        <li>Click on the fork that you would like to get the money for</li>
-        <li>Download the wallet and follow the steps TODO Explanation</li>
-        <li>Let it run until you see your money TODO Screenshot</li>
+        <li>Download a wallet and follow the steps TODO</li>
+        <li>Let it run until you see your money TODO</li>
         <li>Register at a market, linked on the page of the fork (Note: If you use the link on our page, you help us as
-            we
-            get a small provision if you sell your coins using this link. Thanks in advance.
+            we get a small provision if you sell your coins using this link. Thanks in advance.)
         </li>
         <li>Transfer the money from your wallet to this market. How this works depends on the market</li>
         <li>Sell it</li>
-        <li>Be happy :-)</li>
     </ul>
 
 </div>
