--- a/website/src/inc/header.html
+++ b/website/src/inc/header.html
@@ -4,6 +4,13 @@
     <title>{{{title}}}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
+
+{{#each selectLanguages}}
+  {{#ifCond id '!=' ../language.id}}
+  <link rel="alternate" href="https://allmyforks.com{{value}}" hreflang="{{id}}">
+  {{/ifCond}}
+{{/each}}
+
     <link rel="shortcut icon" href="/favicon.ico">
 
     {{> styles}}
@@ -23,7 +30,6 @@
 </head>
 
 <body class="w3-theme-l3">
-
 
 <div class="w3-bar w3-theme-d4">
 
