--- a/website/src/inc/header.html
+++ b/website/src/inc/header.html
@@ -5,6 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
 
+
+    <meta property="og:title" content="{{title}}" />
+    <meta name="description" content="{{description}}" />
+
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="splash_600x315.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="600">
+    <meta property="og:image:height" content="315">
+
+{{#each selectLanguages}}
+  {{#ifCond id '==' ../language.id}}
+    <meta property="og:url" content="https://allmyforks.com{{value}}">
+   {{/ifCond}}
+{{/each}}
+
+
 {{#each selectLanguages}}
   {{#ifCond id '!=' ../language.id}}
   <link rel="alternate" href="https://allmyforks.com{{value}}" hreflang="{{id}}">
