--- a/website/src/supportus.html
+++ b/website/src/supportus.html
@@ -23,6 +23,13 @@
         </li>
     </ul>
 
+    <a class="w3-bar-item w3-button w3-right" href="https://froso.de" target="new">Frontend Solutions
+        GmbH</a>
+
+    <a class="w3-bar-item w3-button w3-right" href="https://github.com/FrontendSolutionsGmbH/bitcoin-forks"
+       target="new">Github</a>
+
+       
     <h3>We are more than happy to receive a donation from you</h3>
     <ul>
 
