--- a/website/src/forklist.html
+++ b/website/src/forklist.html
@@ -105,9 +105,11 @@
     </div>
 </div>
 
+{{#unless mvp}}
 <div class="w3-container w3-content">
 
     {{intlGet "like_this_project"}} <a href="/{{language.id}}/support-allmyforks/">{{intlGet "support_us"}}</a> !
 </div>
+{{/unless}}
 
 {{> footer}}
