--- a/website/src/inc/footer.html
+++ b/website/src/inc/footer.html
@@ -5,9 +5,13 @@
 </div>
 
 <div class="w3-container w3-bar w3-large w3-theme-d4">
+
+	{{#unless mvp}}
     <a class="w3-bar-item w3-button" href="/{{language.id}}/what-is-a-fork/">{{intlGet "whatisafork"}}</a>
     <a class="w3-bar-item w3-button" href="/{{language.id}}/how-to-claim-forked-coins">
         {{formatMessage (intlGet "howtoclaimmyforkedcoin") name="_____"}}</a>
+      {{/unless}}
+
     <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/imprint/">{{intlGet "imprint"}}</a>
     <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/privacy/">{{intlGet "data_privacy"}}</a>
     <a class="w3-bar-item w3-button w3-right" href="/{{language.id}}/disclaimer/">{{intlGet "disclaimer"}}</a>
